--- a/src/app/intelligence/intelligenceScss/_darkInsightPage.scss
+++ b/src/app/intelligence/intelligenceScss/_darkInsightPage.scss
@@ -76,7 +76,7 @@
               color: var(--black191) !important;
               &:focus{
                 background-color: var(--cardBackgroud) !important;
-                border: 0.1rem solid var(--black191) !important;
+                border: 0.1rem solid var(--borderwhiteDarkLight) !important;
               }
           }
       }
