--- a/src/assets/scss/portfolio/_portfolio.scss
+++ b/src/assets/scss/portfolio/_portfolio.scss
@@ -1891,7 +1891,7 @@
         justify-content: space-between;
         padding: 1rem 0rem;
         margin-right: 1.6rem;
-        border-top: 1px solid rgba(229, 229, 230, 0.5);
+        border-top: 1px solid var(--borderwhiteDarkLight);
 
         span img {
           position: relative;
